# haskell-greek-morph

./: .gitignore  .gitmodules  .travis.yml  README.md  greek-morph.cabal  stack.yaml
app/: Main.hs  Morph.hs  Queries.hs
src/Grammar/Greek/Morph/: Aspirate.hs  ElidingForms.hs  EncliticForms.hs  Phoneme.hs  ProcliticForms.hs  QuasiQuoters.hs  Rounds.hs  Serialize.hs  Stage.hs  Types.hs
src/Grammar/Greek/Morph/AccentHandling/: Round.hs  Stage.hs  Types.hs
src/Grammar/Greek/Morph/Clitic/: Round.hs  Stage.hs  Types.hs
src/Grammar/Greek/Morph/Forms/: Eliding.hs  Enclitic.hs  Proclitic.hs
src/Grammar/Greek/Morph/Paradigm/: Ending.hs  Maps.hs  Types.hs
src/Grammar/Greek/Morph/Phoneme/: Round.hs  Stage.hs  Types.hs
src/Grammar/Greek/Morph/Rounds/: ShouldElide.hs  WordProperties.hs
src/Grammar/Greek/Morph/ShouldElide/: Round.hs  Stage.hs  Types.hs
src/Grammar/Greek/Morph/Smyth/: Adjectives.hs  Particles.hs  Prepositions.hs
src/Grammar/Greek/Morph/Smyth/Conjunctions/: Coordinating.hs  Subordinating.hs
src/Grammar/Greek/Morph/Smyth/Nouns/: Declension1.hs  Declension2.hs  Declension3.hs  FirstDeclension.hs  Nouns.hs
src/Grammar/Greek/Morph/Smyth/Particles/: ConjunctionsCoordinating.hs  ConjunctionsSubordinating.hs
src/Grammar/Greek/Morph/Smyth/Verbs/: Participles.hs  Verbs.hs
src/Grammar/Greek/Morph/Stage/: ShouldElide.hs
test/: Spec.hs  WordTests.hs
