name: greek-morph
version: 0.2.0
synopsis: Ancient Greek morphophonology modeled in Haskell verified against primary sources
description: Please see README.md
homepage: https://github.com/ancientlanguage/haskell-greek-morph#readme
author: Scott Fleischman
maintainer: scott-fleischman@users.noreply.github.com
copyright: 2016 Scott Fleischman
build-type: Simple
cabal-version: >=1.10
source-repository head
  type: git
  location: https://github.com/ancientlanguage/haskell-greek-morph

library
  hs-source-dirs: src
  exposed-modules:
    Grammar.Greek.Morph.Serialize
    Grammar.Greek.Morph.Stage
  ghc-options: -Wall -fwarn-tabs -O2
  default-extensions:
    OverloadedStrings,
    PatternSynonyms,
    ScopedTypeVariables,
    TypeOperators
  build-depends:
    base >= 4.9,
    containers,
    bytestring,
    text,
    cereal,
    lens,
    either,
    random-fu,
    random-source,
    array,
    directory,
    filepath,
    extra,
    test-framework,
    test-framework-hunit,
    HUnit,
    primary-type,
    grammar,
    greek-script
  default-language: Haskell2010

executable query
  hs-source-dirs: app
  main-is: Main.hs
  ghc-options: -Wall -fwarn-tabs -O2 -threaded -rtsopts -with-rtsopts=-N
  default-extensions:
    OverloadedStrings
    ScopedTypeVariables,
    TypeOperators
  build-depends:
    base,
    containers,
    bytestring,
    text,
    either,
    lens,
    cereal,
    optparse-applicative,
    text-format,
    primary-type,
    grammar,
    greek-script,
    greek-morph
  default-language: Haskell2010
