name: greek-morph
version: 3.0.0
synopsis: Ancient Greek morphophonology modeled in Haskell verified against primary sources
description: Please see README.md
homepage: https://github.com/ancientlanguage/haskell-greek-morph#readme
author: Scott Fleischman
maintainer: scott-fleischman@users.noreply.github.com
copyright: 2016 Scott Fleischman
build-type: Simple
cabal-version: >=1.10
source-repository head
  type: git
  location: https://github.com/ancientlanguage/haskell-greek-morph

library
  hs-source-dirs: src
  exposed-modules:
    Grammar.Greek.Morph.Clitic.Round
    Grammar.Greek.Morph.Clitic.Stage
    Grammar.Greek.Morph.Clitic.Types
    Grammar.Greek.Morph.Aspirate
    Grammar.Greek.Morph.Forms.Eliding
    Grammar.Greek.Morph.Forms.Enclitic
    Grammar.Greek.Morph.Forms.Proclitic
    Grammar.Greek.Morph.Paradigm.Ending
    Grammar.Greek.Morph.Paradigm.Maps
    Grammar.Greek.Morph.Paradigm.Types
    Grammar.Greek.Morph.Phoneme.Round
    Grammar.Greek.Morph.Phoneme.Stage
    Grammar.Greek.Morph.Phoneme.Types
    Grammar.Greek.Morph.QuasiQuoters
    Grammar.Greek.Morph.ShouldElide.Round
    Grammar.Greek.Morph.ShouldElide.Stage
    Grammar.Greek.Morph.ShouldElide.Types
    Grammar.Greek.Morph.Serialize
    Grammar.Greek.Morph.Smyth.Adjectives
    Grammar.Greek.Morph.Smyth.Conjunctions.Coordinating
    Grammar.Greek.Morph.Smyth.Conjunctions.Subordinating
    Grammar.Greek.Morph.Smyth.Nouns.Declension1
    Grammar.Greek.Morph.Smyth.Nouns.Declension2
    Grammar.Greek.Morph.Smyth.Nouns.Declension3
    Grammar.Greek.Morph.Smyth.Prepositions
    Grammar.Greek.Morph.Smyth.Verbs.Participles
    Grammar.Greek.Morph.Smyth.Verbs.Verbs
    Grammar.Greek.Morph.Stage
    Grammar.Greek.Morph.Types
  ghc-options: -Wall -fwarn-tabs -O2
  default-extensions:
    OverloadedStrings,
    PatternSynonyms,
    ScopedTypeVariables,
    TypeOperators
  build-depends:
    base >= 4.9,
    containers,
    bytestring,
    text,
    cereal,
    lens,
    either,
    random-fu,
    random-source,
    array,
    directory,
    filepath,
    extra,
    template-haskell,
    syb,
    test-framework,
    test-framework-hunit,
    HUnit,
    primary-type,
    grammar,
    greek-script
  default-language: Haskell2010

executable greek-morph-query
  hs-source-dirs: app
  main-is: Main.hs
  other-modules:
    Morph,
    Queries
  ghc-options: -Wall -fwarn-tabs -O2 -threaded -rtsopts -with-rtsopts=-N
  default-extensions:
    OverloadedStrings
    ScopedTypeVariables,
    TypeOperators
  build-depends:
    base,
    containers,
    bytestring,
    text,
    either,
    lens,
    cereal,
    optparse-applicative,
    text-format,
    primary-type,
    grammar,
    greek-script,
    greek-morph
  default-language: Haskell2010

test-suite greek-morph-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
    WordTests
  default-extensions:
    OverloadedStrings,
    ScopedTypeVariables,
    TypeOperators
  build-depends:
    base,
    containers,
    either,
    lens,
    test-framework,
    test-framework-hunit,
    HUnit,
    hspec,
    text,
    primary-type,
    grammar,
    greek-script,
    greek-morph
  ghc-options: -fwarn-tabs -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
